--- a/www/shop.html
+++ b/www/shop.html
@@ -41,7 +41,15 @@
                     <div class="row">
                         <div class="col align-self-center">
                             <div class="input-group input-group-lg name-container">
-                                <input id="name-box" class="form-control" placeholder="Username">
+                                <select id="name-box">
+                                    <option value="austin">Austin</option>
+                                    <option value="boyd">Boyd</option>
+                                    <option value="chitra">Chitra</option>
+                                    <option value="dan">Dan</option>
+                                    <option value="kevin">Kevin</option>
+                                    <option value="tony">Tony</option>
+                                </select>
+                                <!-- <input id="name-box" class="form-control" placeholder="Username"> -->
                             </div>
                         </div>
                     </div>
