Moved products and items to a scope

--- a/www/shop.html
+++ b/www/shop.html
@@ -52,6 +52,14 @@
                                 <!-- <input id="name-box" class="form-control" placeholder="Username"> -->
                             </div>
                         </div>
+                        <div class="col align-self-right">
+                            <div class="input-group input-group-lg">
+                                <select class="corona" id="corona" name="corona">
+                                    <option value="false">false</option>
+                                    <option value="true">true</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row type-row justify-content-end" style="display:none;">
